<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_parent_guide_line_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_parent_guide_line_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_parent_guide_line_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_parent_guide_line_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_child_constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_parent_guide_line_bottom"
        app:layout_constraintEnd_toStartOf="@id/login_parent_guide_line_end"
        app:layout_constraintStart_toEndOf="@id/login_parent_guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/login_parent_guide_line_top">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_guide_line_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_guide_line_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_uppercase"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/login_layout_email"
            app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/login_layout_password"
            app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
            app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
            app:layout_constraintTop_toBottomOf="@id/login_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
            app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
            app:layout_constraintTop_toBottomOf="@id/login_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/green_700"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
            app:layout_constraintTop_toBottomOf="@id/login_layout_password" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/login_uppercase"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_guide_line_2"
            app:layout_constraintStart_toEndOf="@id/login_guide_line_1"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_txt" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/no_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/no_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_txt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/login_parent_guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/login_child_constraint"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_underlined"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/no_account_txt"
        app:layout_constraintEnd_toStartOf="@id/login_parent_guide_line_end"
        app:layout_constraintStart_toEndOf="@id/no_account_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>